attempt to fix overflow on modal

--- a/index.css
+++ b/index.css
@@ -53,6 +53,7 @@
 
 #modal1{
 	opacity: 0.75 !important;
+	overflow: visible !important;
 }
 
 .closeModal{
